# youtube-content

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json  railway.worker.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/scripts/: start-api.sh
apps/api/src/faceless/: config.py  crypto.py  main.py  worker.py
apps/api/src/faceless/api/: deps.py  errors.py
apps/api/src/faceless/api/routes/: health.py  me.py
apps/api/src/faceless/auth/: clerk.py
apps/api/src/faceless/db/: base.py
apps/api/src/faceless/db/models/: __init__.py  user.py
apps/api/src/faceless/observability/: logging.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_health.py  test_me.py  test_migrations.py  test_worker.py
apps/api/tests/unit/: test_clerk_auth.py  test_config.py  test_crypto.py
apps/web/: .env.example  Dockerfile  eslint.config.mjs  middleware.ts  package.json  railway.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/lib/: api-client.ts
docs/deployment/: railway.md
docs/superpowers/plans/: 2026-04-28-p1-foundation.md
docs/superpowers/specs/: 2026-04-28-faceless-youtube-saas-design.md
